--- a/BinarytoDecimal.css
+++ b/BinarytoDecimal.css
@@ -17,6 +17,20 @@ body {
 
 #output {
     color: white;
+    font-family: sans-serif;
+}
+
+input {
+    display: inline-block;
+    padding: 1.5vh;
+    font-size: 1em;
+    border: none;
+    border-radius: 0.5vh;
+    appearance: none;
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    width: fit-content;
 }
 
 .github-corner {
